<resources>
    <string name="app_name">MyMusicApp2</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title">Title</string>
    <string name="author">Author</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sheets_activity_my_sheets_tab_title">My Sheets</string>
    <string name="sheets_activity_shared_with_me_tab_title">Shared with me</string>
    <string name="sharedsheets_fragment_empty_message">No Sheets yet.</string>
    <string name="listfragment_mysheets_message_create_new_sheet">Create new sheet!</string>
    <string name="activity_create_new_sheet_title_tv">Sheet title</string>
    <string name="cs_activity_sheet_author_hint">Author</string>
    <string name="cs_activity_numerator_hint">Numerator</string>
    <string name="cs_acitivyt_denominator_et">Denominator</string>
    <string name="cs_activity_timesig_title">Time Signature</string>
    <string name="cs_activity_timesig_denom_hint">Denomenator</string>
    <string name="cs_activity_number_of_measures_hint">Number Of Measures</string>
    <string name="cs_create_new_sheet_label">Create new sheet</string>
    <string name="cs_activity_default_title_et">My Song</string>
    <string name="si_email">Email</string>
    <string name="si_password">Password</string>
    <string name="si_login_btn_text">Login</string>
    <string name="cns_create_btn">Create</string>
    <string name="si_new_user_prompt_text">New user</string>
    <string name="si_confirm_password">Confirm Password</string>
    <string name="si_already_have_an_account">Already have an account?</string>
    <string name="si_create_new_account">Create new account</string>
    <string name="si_created_new_user_msg">Created new user</string>
    <string name="si_login_successful_msg">Login successful</string>
    <string name="action_bar_menu_sign_out">Sign Out</string>
</resources>
