<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:layoutDirection="ltr"
    android:background="@color/preference_fallback_accent_color"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <RelativeLayout
                android:id="@+id/main.backdrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"
                >

                <TextView
                    android:id="@+id/sheet_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"/>
                <TextView
                    android:id="@+id/sheet_author_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/author"
                    android:layout_below="@id/sheet_title_tv"
                    android:textSize="@dimen/text_size_medium"/>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/score_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/author"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:focusable="false"
                android:nestedScrollingEnabled="false">

            </android.support.v7.widget.RecyclerView>


            <FrameLayout
                android:id="@+id/edit_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:visibility="gone"/>
        </LinearLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        app:layout_anchorGravity="bottom|right"
        />
</android.support.design.widget.CoordinatorLayout>










